--- a/recibo_venta_variables.html
+++ b/recibo_venta_variables.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Recibo de Pago</title>
+    <title>Recibo de Venta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
@@ -442,8 +442,8 @@
                                                     </td>
                                                     <td width="15"></td>
                                                     <td valign="middle">
-                                                        <p class="tarjeta">CRÉDITO **** 1235</p>
-                                                        <p class="titular">ARIEL MILLÁN</p>
+                                                        <p class="tarjeta">CR&Eacute;DITO **** 1235</p>
+                                                        <p class="titular">ARIEL MILL&Aacute;N</p>
                                                     </td>
                                                 </tr>
                                             </table>
@@ -489,7 +489,7 @@
             <tr>
                 <td colspan="3" class="compraText">
                     <h5 class="text">Tu compra ha sido procesada de forma segura. <br>
-                        Por favor conserva este comprobante para cualquier aclaración.</h5>
+                        Por favor conserva este comprobante para cualquier aclaraci&oacute;acute;n.</h5>
 
                 </td>
             </tr>
@@ -539,15 +539,15 @@
                         <td align="right">175705118</td>
                     </tr>
                     <tr>
-                        <td>AFILIACIÓN ID:</td>
+                        <td>AFILIACI&Oacute;N ID:</td>
                         <td align="right">9577752</td>
                     </tr>
                     <tr>
-                        <td>ID. TRANSACCIÓN:</td>
+                        <td>ID. TRANSACCI&Oacute;N:</td>
                         <td align="right">217550994</td>
                     </tr>
                     <tr>
-                        <td>NO. AUTORIZACIÓN:</td>
+                        <td>NO. AUTORIZACI&Oacute;N:</td>
                         <td align="right">469410</td>
                     </tr>
                     <tr>
@@ -581,16 +581,16 @@
     <table class="containerTerminos" cellpadding="0" cellspacing="0" align="center">
         <tr>
             <td>
-                <p class="textTerminos">Por este pagaré prometo y me obligo incondicionalmente a pagar a la orden de la
-                    institución emisora de la tarjeta relacionada, en sus oficinas, la cantidad que aparece en el total
-                    de éste título el cual suscribo al amparo del contrato que tengo celebrado con dicha institución
-                    para el uso de esta Tarjeta.Reconozco y acepto que el presente es comprobante de la operación
-                    señalada, el cual tiene pleno valor probatorio y fuerza legal en virtud de que firmé y/o digité mi
-                    firma electrónica, la cual es de mi exclusiva responsabilidad por lo que manifiesto plena
+                <p class="textTerminos">Por este pagar&eacute; prometo y me obligo incondicionalmente a pagar a la orden de la
+                    instituci&oacute;n emisora de la tarjeta relacionada, en sus oficinas, la cantidad que aparece en el total
+                    de &eacute;ste t&iacute;tulo el cual suscribo al amparo del contrato que tengo celebrado con dicha instituci&oacute;n
+                    para el uso de esta Tarjeta. Reconozco y acepto que el presente es comprobante de la operaci&oacute;n
+                    señalada, el cual tiene pleno valor probatorio y fuerza legal en virtud de que firm&eacute; y/o digit&eacute; mi
+                    firma electr&oacute;nica, la cual es de mi exclusiva responsabilidad por lo que manifiesto plena
                     conformidad respecto al cargo efectuado a la cuenta de la que se deriva esta Tarjeta.
-                    El presente pagaré es negociable únicamente con instituciones bancarias, a excepción de que éste sea
+                    El presente pagar&eacute; es negociable &uacute;nicamente con instituciones bancarias, a excepci&oacute;n de que &eacute;ste sea
                     suscrito por tarjetahabientes de American Express.
-                    Es importante conservar el voucher ante cualquier solicitud de aclaración.
+                    Es importante conservar el voucher ante cualquier solicitud de aclaraci&oacute;n.
                     NO NEGOCIABLE</p>
 
             </td>
