--- a/recibo_venta_editable.html
+++ b/recibo_venta_editable.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Recibo de Pago</title>
+    <title>Recibo de Venta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
          @import url('https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
@@ -62,7 +62,7 @@
 
 
         .header {
-            background-color: #0C0C21;
+            background-color: #ffffffcc;
             margin-top: 2rem;
             border-radius: 10px 10px 0 0;
         }
@@ -233,7 +233,7 @@
         .bannerItem {
             background-color: #E9EBF8;
             border-radius: 10px;
-            font-family: Arial, Helvetica, sans-serif;
+             font-family: "Public Sans", sans-serif;
         }
 
         .bannerItemContent {
@@ -277,7 +277,7 @@
         }
 
         .procesadorFondo {
-            background-image: url('/fondoProcesador.png');
+            background-image: url('/img/fondoProcesador.png');
             background-color: #233A87;
             border-radius: 0 0 10px 10px;
             letter-spacing: 0.25em;
@@ -322,7 +322,7 @@
         <table class="container" cellpadding="0" cellspacing="0" align="center">
             <tr class="header">
                 <td colspan="3">
-                    <img src="/portadaDelta@4x-100.jpg" alt="Portada">
+                    <img src="/img/portadaDelta@4x-100.jpg" alt="Portada">
                 </td>
             </tr>
 
@@ -331,11 +331,11 @@
                     <table cellpadding="0" cellspacing="0" border="0">
                         <tr>
                             <td class="logo">
-                                <img src="fotoPerfil@4x-100.jpg" alt="Logo">
+                                <img src="/img/fotoPerfil@4x-100.jpg" alt="Logo">
                             </td>
                             <td class="col"></td>
                             <td>
-                                <h4 class="nombreNegocio">DELTA DESARROLLO<br>GRÁFICO</h4>
+                                <h4 class="nombreNegocio">DELTA DESARROLLO<br>GR&Aacute;FICO</h4>
                             </td>
                         </tr>
                     </table>
@@ -437,16 +437,16 @@
                                                         <table border="0" cellspacing="0" cellpadding="0">
                                                             <tr>
                                                                 <td align="center" class="bannerImg">
-                                                                    <img src="/Visa.png" width="60"
-                                                                        alt="Icono de tarjeta">
+                                                                    <img src="/img/visa.png" width="60"
+                                                                        alt="Tarjeta">
                                                                 </td>
                                                             </tr>
                                                         </table>
                                                     </td>
                                                     <td width="15"></td>
                                                     <td valign="middle">
-                                                        <p class="tarjeta">CRÉDITO **** 1235</p>
-                                                        <p class="titular">ARIEL MILLÁN</p>
+                                                        <p class="tarjeta">CR&Eacute;DITO **** 1235</p>
+                                                        <p class="titular">ARIEL MILL&Aacute;N</p>
                                                     </td>
                                                 </tr>
                                             </table>
@@ -464,8 +464,8 @@
                                                         <table border="0" cellspacing="0" cellpadding="0">
                                                             <tr>
                                                                 <td align="center" class="bannerImg">
-                                                                    <img src="/contacless.png" width="60"
-                                                                        alt="Icono de tarjeta">
+                                                                    <img src="/img/contacless.png" width="60"
+                                                                        alt="Metodo de autorizacion">
                                                                 </td>
                                                             </tr>
                                                         </table>
@@ -492,7 +492,7 @@
             <tr>
                 <td colspan="3" class="compraText">
                     <h5 class="text">Tu compra ha sido procesada de forma segura. <br>
-                        Por favor conserva este comprobante para cualquier aclaración.</h5>
+                        Por favor conserva este comprobante para cualquier aclaraci&Oacute;n.</h5>
 
                 </td>
             </tr>
@@ -516,7 +516,7 @@
                                                         <p class="textProcesador ">procesado por</p>
                                                     </td>
                                                     <td valign="middle" align="right">
-                                                        <img src="/logomarca.png" alt="" class="logoProcesador">
+                                                        <img src="/img/logomarca.png" alt="" class="logoProcesador">
                                                     </td>
                                                 </tr>
                                             </table>
@@ -531,7 +531,7 @@
             </tr>
         </table>
     </table>
-    <!-- Datos de la transacción -->
+    <!-- Datos de la transacci&Oacute;n -->
     <table class="containerFooter" cellpadding="0" cellspacing="0" align="center">
 
         <tr>
@@ -542,15 +542,15 @@
                         <td align="right">175705118</td>
                     </tr>
                     <tr>
-                        <td>AFILIACIÓN ID:</td>
+                        <td>AFILIACI&Oacute;N ID:</td>
                         <td align="right">9577752</td>
                     </tr>
                     <tr>
-                        <td>ID. TRANSACCIÓN:</td>
+                        <td>ID. TRANSACCI&Oacute;N:</td>
                         <td align="right">217550994</td>
                     </tr>
                     <tr>
-                        <td>NO. AUTORIZACIÓN:</td>
+                        <td>NO. AUTORIZACI&Oacute;;N:</td>
                         <td align="right">469410</td>
                     </tr>
                     <tr>
@@ -584,16 +584,16 @@
     <table class="containerTerminos" cellpadding="0" cellspacing="0" align="center">
         <tr>
             <td>
-                <p class="textTerminos">Por este pagaré prometo y me obligo incondicionalmente a pagar a la orden de la
-                    institución emisora de la tarjeta relacionada, en sus oficinas, la cantidad que aparece en el total
-                    de éste título el cual suscribo al amparo del contrato que tengo celebrado con dicha institución
-                    para el uso de esta Tarjeta.Reconozco y acepto que el presente es comprobante de la operación
-                    señalada, el cual tiene pleno valor probatorio y fuerza legal en virtud de que firmé y/o digité mi
-                    firma electrónica, la cual es de mi exclusiva responsabilidad por lo que manifiesto plena
+               <p class="textTerminos">Por este pagar&eacute; prometo y me obligo incondicionalmente a pagar a la orden de la
+                    instituci&oacute;n emisora de la tarjeta relacionada, en sus oficinas, la cantidad que aparece en el total
+                    de &eacute;ste t&iacute;tulo el cual suscribo al amparo del contrato que tengo celebrado con dicha instituci&oacute;n
+                    para el uso de esta Tarjeta. Reconozco y acepto que el presente es comprobante de la operaci&oacute;n
+                    señalada, el cual tiene pleno valor probatorio y fuerza legal en virtud de que firm&eacute; y/o digit&eacute; mi
+                    firma electr&oacute;nica, la cual es de mi exclusiva responsabilidad por lo que manifiesto plena
                     conformidad respecto al cargo efectuado a la cuenta de la que se deriva esta Tarjeta.
-                    El presente pagaré es negociable únicamente con instituciones bancarias, a excepción de que éste sea
+                    El presente pagar&eacute; es negociable &uacute;nicamente con instituciones bancarias, a excepci&oacute;n de que &eacute;ste sea
                     suscrito por tarjetahabientes de American Express.
-                    Es importante conservar el voucher ante cualquier solicitud de aclaración.
+                    Es importante conservar el voucher ante cualquier solicitud de aclaraci&oacute;n.
                     NO NEGOCIABLE</p>
 
             </td>
