--- a/recibo_venta_variables_contacless.html
+++ b/recibo_venta_variables_contacless.html
@@ -301,13 +301,92 @@
             text-align: justify;
         }
 
+          @media only screen and (max-width: 560px) {
+            .logo {
+                width: 40px;
+                height: auto;
+            }
+
+            .nombreNegocio {
+                font-size: 12px;
+
+            }
+
+            .fechaRecibo {
+                font-size: 10px;
+            }
+
+            .total {
+                font-size: 16px;
+            }
+
+            .monto {
+                font-size: 20px;
+            }
+
+            .badgeContainer {
+                font-size: 12px;
+                gap: 4px;
+                display: flex;
+                flex-direction: column;
+            }
+
+            .textDestacado {
+                font-size: 12px;
+            }
+
+            .detalleCompra {
+                padding: 20px;
+                font-size: 10px;
+            }
+
+            .detalleTitulo {
+                font-size: 12px;
+                letter-spacing: 0.15em;
+            }
+
+            .detalleTabla {
+                font-size: 12px;
+            }
+
+            .tarjeta {
+                font-size: 10px;
+            }
+
+            .titular {
+                font-size: 10px;
+            }
+
+            .text {
+                font-size: 10px;
+            }
+
+            .textProcesador {
+                font-size: 8px;
+            }
+
+            .textTerminos {
+                font-size: 8px;
+            }
+
+            .containerFooter {
+                font-size: 8px;
+                padding: 20px;
+            }
+
+            .logoProcesador {
+                width: 100px;
+                height: auto;
+            }
+        }
+        
         @media only screen and (max-width: 620px) {
             .container {
                 width: 90% !important;
             }
 
             .total {
-                font-size: 24px !important;
+                font-size: 20px !important;
             }
         }
     </style>
