--- a/recibo_venta_variables_firma.html
+++ b/recibo_venta_variables_firma.html
@@ -7,12 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-
         body {
             margin: 0;
             padding: 0;
-            background: #f4f4f4;
-            font-family: "Public Sans", sans-serif;
+            background: {{bodyBg}};
+           font-family: "Public Sans", sans-serif;
         }
 
         table {
@@ -29,7 +28,7 @@
         .containerRecibo {
             max-width: 600px;
             margin: 0 auto;
-            background: #fff;
+            background: {{blanco}};
             margin-top: 1rem;
             border-radius: 10px 10px 0 0;
 
@@ -38,33 +37,32 @@
         .container {
             max-width: 600px;
             margin: 0 auto;
-            background: #fff;
+            background: {{blanco}};
 
         }
 
         .containerFooter {
             max-width: 600px;
             margin: 0 auto;
-            background: #f4f4f4;
+            background: {{bgLoading}};
             padding: 20px;
             border-radius: 0 0 10px 10px;
             font-size: 12px;
-            color: #0C0C21;
-            padding: 2rem 4rem 2rem 4rem;
+            color: {{textos}};
+              padding: 2rem 4rem 2rem 4rem;
         }
-
         .containerTerminos {
             max-width: 600px;
             margin: 0 auto;
-            padding: 1rem 4rem 4rem 4rem;
+         padding: 1rem 4rem 4rem 4rem;
             padding: 20px;
             font-size: 12px;
-            color: #333;
+            color: {{textos}};
         }
 
 
         .header {
-            background-color: #ffffffcc;
+            background-color: {{bgLoading}};
             margin-top: 2rem;
             border-radius: 10px 10px 0 0;
         }
@@ -74,12 +72,11 @@
         .button {
             display: inline-block;
             padding: 6px 12px;
-            background: #C8EFDE;
-            color: #36b57f;
+            background: {{correctoBg}};
+            color: {{correcto}};
             border-radius: 4px;
             font-size: 14px;
         }
-
 
         .p-md {
             padding-top: 2rem;
@@ -115,8 +112,6 @@
             overflow: hidden;
             text-align: center;
             vertical-align: middle;
-
-
         }
 
         .col {
@@ -130,7 +125,7 @@
 
         .nombreNegocio {
             font-size: 18px;
-            color: #0C0C21;
+            color: {{textos}};
             margin: 0;
             font-weight: bold;
         }
@@ -140,7 +135,7 @@
             font-size: 12px;
             text-align: right;
             margin: 0;
-            color: #545463;
+            color: {{neutral}};
         }
 
         .badgeContainer {
@@ -157,14 +152,14 @@
             white-space: nowrap;
             vertical-align: baseline;
             border-radius: 4rem;
-            color: #36b57f;
-            background-color: #C8EFDE;
+            color: {{correcto}};
+            background-color: {{correctoBg}};
             margin-right: 5px
         }
 
         .destacadoCorrecto {
-            color: #36b57f;
-            background-color: #C8EFDE;
+            color: {{correcto}};
+            background-color: {{correctoBg}};
             height: 10px;
             font-size: 12px;
         }
@@ -173,14 +168,14 @@
             font-size: 24px;
             font-weight: bold;
             padding: 10px;
-            color: #0C0C21;
+            color: {{textos}};
         }
 
         .monto {
             font-size: 32px;
             font-weight: bold;
             padding: 10px;
-            color: #36b57f;
+            color: {{correcto}};
         }
 
         .textDestacado {
@@ -191,7 +186,7 @@
         }
 
         .separador {
-            border-top: 1px dotted #545463;
+            border-top: 1px dotted {{neutral}};
             line-height: 1px;
             height: 1px;
         }
@@ -199,12 +194,12 @@
         .detalleCompra {
             padding: 36px;
             font-size: 14px;
-            color: #333;
+            color: {{textos}};
         }
 
         .detalleTitulo {
             font-size: 14px;
-            color: #0C0C21;
+            color: {{textos}};
             margin-bottom: 20px;
             text-transform: uppercase;
             text-align: center;
@@ -218,7 +213,7 @@
         }
 
         .detalleTablaItem {
-            border-bottom: 1px solid #c1c1c1;
+            border-bottom: 1px solid {{skeletonLoad}};
             padding: 20px;
         }
 
@@ -235,9 +230,9 @@
         }
 
         .bannerItem {
-            background-color: #E9EBF8;
+            background-color: {{bannerItem}};
             border-radius: 10px;
-
+            font-family: Arial, Helvetica, sans-serif;
         }
 
         .bannerItemContent {
@@ -252,7 +247,7 @@
 
         .tarjeta {
             font-size: 14px;
-            color: #333333;
+            color: {{textos}};
             font-weight: bold;
 
             margin: 0;
@@ -261,7 +256,7 @@
 
         .titular {
             font-size: 12px;
-            color: #545463;
+            color: {{neutral}};
             padding-top: 4px;
             margin: 0;
             text-transform: uppercase;
@@ -275,14 +270,14 @@
         .text {
             margin: 0;
             font-size: 12px;
-            color: #0C0C21;
+            color: {{textos}};
             line-height: 1.6;
             font-weight: 100;
         }
 
         .procesadorFondo {
-            background-image: url('/img/fondoProcesador.png');
-            background-color: #233A87;
+            background-image: {{fondoProcesador}};
+            background-color: {{marca}};
             border-radius: 0 0 10px 10px;
             letter-spacing: 0.25em;
         }
@@ -290,7 +285,7 @@
         .textProcesador {
             margin: 0;
             font-size: 12px;
-            color: #ffffff;
+            color: {{blanco}};
             line-height: 1.6;
             font-weight: 100;
             text-transform: uppercase;
@@ -300,15 +295,13 @@
             padding-right: 1rem;
         }
 
-
-
         .textTerminos {
             font-size: 10px;
             line-height: 1.4;
             text-align: justify;
         }
 
-        @media only screen and (max-width: 560px) {
+          @media only screen and (max-width: 560px) {
             .logo {
                 width: 40px;
                 height: auto;
@@ -405,7 +398,7 @@
         <table class="container" cellpadding="0" cellspacing="0" align="center">
             <tr class="header">
                 <td colspan="3">
-                    <img src="/img/portadaDelta@4x-100.jpg" alt="Portada">
+                    <img src="{{portada}}" alt="Portada">
                 </td>
             </tr>
 
@@ -414,11 +407,11 @@
                     <table cellpadding="0" cellspacing="0" border="0">
                         <tr>
                             <td class="logo">
-                                <img src="/img/fotoPerfil@4x-100.jpg" alt="Logo">
+                                <img src="{{logoAvatar}}" alt="Logo" >
                             </td>
                             <td class="col"></td>
                             <td>
-                                <h4 class="nombreNegocio">DELTA DESARROLLO<br>GR&Aacute;FICO</h4>
+                                <h4 class="nombreNegocio">DELTA DESARROLLO<br>GRÁFICO</h4>
                             </td>
                         </tr>
                     </table>
@@ -520,7 +513,8 @@
                                                         <table border="0" cellspacing="0" cellpadding="0">
                                                             <tr>
                                                                 <td align="center" class="bannerImg">
-                                                                    <img src="/img/visa.png" width="60" alt="Tarjeta">
+                                                                    <img src="{{visa}}" width="60"
+                                                                        alt="Tarjeta">
                                                                 </td>
                                                             </tr>
                                                         </table>
@@ -546,8 +540,8 @@
                                                         <table border="0" cellspacing="0" cellpadding="0">
                                                             <tr>
                                                                 <td align="center" class="bannerImg">
-                                                                    <img src="/img/contacless.png" width="60"
-                                                                        alt="Metodo de autorizacion">
+                                                                    <img src="{{firma}}" width="60"
+                                                                        alt="Metodo de autorización">
                                                                 </td>
                                                             </tr>
                                                         </table>
@@ -574,7 +568,7 @@
             <tr>
                 <td colspan="3" class="compraText">
                     <h5 class="text">Tu compra ha sido procesada de forma segura. <br>
-                        Por favor conserva este comprobante para cualquier aclaraci&Oacute;n.</h5>
+                        Por favor conserva este comprobante para cualquier aclaraci&oacute;acute;n.</h5>
 
                 </td>
             </tr>
@@ -598,7 +592,7 @@
                                                         <p class="textProcesador ">procesado por</p>
                                                     </td>
                                                     <td valign="middle" align="right">
-                                                        <img src="/img/logomarca.png" alt="" class="logoProcesador">
+                                                        <img src="{{logoInv}}" alt="Logo procesador" class="logoProcesador">
                                                     </td>
                                                 </tr>
                                             </table>
@@ -613,7 +607,7 @@
             </tr>
         </table>
     </table>
-    <!-- Datos de la transacci&Oacute;n -->
+    <!-- Datos de la transacción -->
     <table class="containerFooter" cellpadding="0" cellspacing="0" align="center">
 
         <tr>
@@ -632,7 +626,7 @@
                         <td align="right">217550994</td>
                     </tr>
                     <tr>
-                        <td>NO. AUTORIZACI&Oacute;;N:</td>
+                        <td>NO. AUTORIZACI&Oacute;N:</td>
                         <td align="right">469410</td>
                     </tr>
                     <tr>
@@ -666,20 +660,14 @@
     <table class="containerTerminos" cellpadding="0" cellspacing="0" align="center">
         <tr>
             <td>
-                <p class="textTerminos">Por este pagar&eacute; prometo y me obligo incondicionalmente a pagar a la orden
-                    de la
-                    instituci&oacute;n emisora de la tarjeta relacionada, en sus oficinas, la cantidad que aparece en el
-                    total
-                    de &eacute;ste t&iacute;tulo el cual suscribo al amparo del contrato que tengo celebrado con dicha
-                    instituci&oacute;n
-                    para el uso de esta Tarjeta. Reconozco y acepto que el presente es comprobante de la
-                    operaci&oacute;n
-                    señalada, el cual tiene pleno valor probatorio y fuerza legal en virtud de que firm&eacute; y/o
-                    digit&eacute; mi
+                <p class="textTerminos">Por este pagar&eacute; prometo y me obligo incondicionalmente a pagar a la orden de la
+                    instituci&oacute;n emisora de la tarjeta relacionada, en sus oficinas, la cantidad que aparece en el total
+                    de &eacute;ste t&iacute;tulo el cual suscribo al amparo del contrato que tengo celebrado con dicha instituci&oacute;n
+                    para el uso de esta Tarjeta. Reconozco y acepto que el presente es comprobante de la operaci&oacute;n
+                    señalada, el cual tiene pleno valor probatorio y fuerza legal en virtud de que firm&eacute; y/o digit&eacute; mi
                     firma electr&oacute;nica, la cual es de mi exclusiva responsabilidad por lo que manifiesto plena
                     conformidad respecto al cargo efectuado a la cuenta de la que se deriva esta Tarjeta.
-                    El presente pagar&eacute; es negociable &uacute;nicamente con instituciones bancarias, a
-                    excepci&oacute;n de que &eacute;ste sea
+                    El presente pagar&eacute; es negociable &uacute;nicamente con instituciones bancarias, a excepci&oacute;n de que &eacute;ste sea
                     suscrito por tarjetahabientes de American Express.
                     Es importante conservar el voucher ante cualquier solicitud de aclaraci&oacute;n.
                     NO NEGOCIABLE</p>
