--- a/recibo_venta_variables_firma.html
+++ b/recibo_venta_variables_firma.html
@@ -549,7 +549,7 @@
                                                     <td width="15"></td>
                                                     <td valign="middle">
                                                         <p class="tarjeta">AUTORIZADO MEDIANTE</p>
-                                                        <p class="titular">CONTACTLESS</p>
+                                                        <p class="titular">firma</p>
                                                     </td>
                                                 </tr>
                                             </table>
