--- a/recibo_venta_editable.html
+++ b/recibo_venta_editable.html
@@ -78,7 +78,7 @@
 
         .header img {
             width: 600px;
-            height: 220px;
+            height: 180px;
             background-size: cover;
             border-radius: 10px 10px 0 0;
         }
@@ -318,6 +318,7 @@
 
         .logoProcesador {
             padding-right: 1rem;
+              width: 150px;
         }
 
         .logoProcesador img {
