--- a/recibo_venta_editable_uala.html
+++ b/recibo_venta_editable_uala.html
@@ -62,6 +62,7 @@
 
         .containerTerminos {
             max-width: 600px;
+            background: #f4f4f4;
             margin: 0 auto;
             padding: 1rem 4rem 4rem 4rem;
             padding: 20px;
@@ -173,7 +174,7 @@
             text-align: center;
             white-space: nowrap;
             vertical-align: baseline;
-            border-radius: 999px;
+            border-radius: 10px;
             color: #36b57f;
             background-color: #C8EFDE;
             margin-right: 5px
@@ -259,6 +260,7 @@
 
         .bannerItemContent {
             padding: 10px;
+            
         }
 
         .bannerImg {
@@ -307,6 +309,12 @@
             background-color: #233A87;
             border-radius: 0 0 10px 10px;
             letter-spacing: 0.25em;
+        }
+        .fondoProcesador {
+              background-image: url('/img/fondoProcesador.png');
+            background-color: #233A87;
+            border-radius: 0 0 10px 10px;
+         padding: 10px;
         }
 
 
@@ -673,9 +681,9 @@
                     <table width="100%" border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td width="49%" valign="top" class="">
-                                <table width="100%" border="0" cellspacing="0" cellpadding="0" class="procesadorFondo">
+                                <table width="100%" border="0" cellspacing="0" cellpadding="0" class="procesadorFondo" >
                                     <tr>
-                                        <td class="bannerItemContent">
+                                        <td class="fondoProcesador">
                                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                                 <tr>
 
