--- a/recibo_venta_editable_uala.html
+++ b/recibo_venta_editable_uala.html
@@ -311,7 +311,7 @@
             letter-spacing: 0.25em;
         }
         .fondoProcesador {
-              background-image: url('/img/fondoProcesador.png');
+              /* background-image: url('/img/fondoProcesador.png'); */
             background-color: #233A87;
             border-radius: 0 0 10px 10px;
          padding: 10px;
@@ -681,7 +681,7 @@
                     <table width="100%" border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td width="49%" valign="top" class="">
-                                <table width="100%" border="0" cellspacing="0" cellpadding="0" class="procesadorFondo" >
+                                <table width="100%" border="0" cellspacing="0" cellpadding="0" class="procesadorFondo" style="background-color: #233A87;">
                                     <tr>
                                         <td class="fondoProcesador">
                                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
