--- a/recibo_venta_variables_firma-ajustespdf.html
+++ b/recibo_venta_variables_firma-ajustespdf.html
@@ -192,7 +192,7 @@
             font-size: 32px;
             font-weight: bold;
             padding: 10px;
-            color: [[${textos}]];
+            color: [[${correcto}]];
         }
 
         .textDestacado {
@@ -661,9 +661,9 @@
                     <table width="100%" border="0" cellspacing="0" cellpadding="0">
                         <tr>
                             <td width="49%" valign="top" class="">
-                                <table width="100%" border="0" cellspacing="0" cellpadding="0" class="procesadorFondo" style=" background-image:[[${fondoProcesador}]]; background-color: {{marca}};">
+                                <table width="100%" border="0" cellspacing="0" cellpadding="0" class="procesadorFondo" >
                                     <tr>
-                                        <td class="bannerItemContent">
+                                        <td class="fondoProcesador">
                                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                                 <tr>
 
