estilos en linea

--- a/recibo_venta_editable.html
+++ b/recibo_venta_editable.html
@@ -551,7 +551,7 @@
                                                         <table border="0" cellspacing="0" cellpadding="0">
                                                             <tr>
                                                                 <td align="center" class="bannerImg">
-                                                                    <img src="/img/visa.png" width="60" alt="Tarjeta">
+                                                                    <img src="/img/Visa.png" width="60" alt="Tarjeta">
                                                                 </td>
                                                             </tr>
                                                         </table>
