--- a/recibo_venta_editable_uala.html
+++ b/recibo_venta_editable_uala.html
@@ -615,7 +615,7 @@
                                                         <table border="0" cellspacing="0" cellpadding="0">
                                                             <tr>
                                                                 <td align="center" class="bannerImg">
-                                                                    <img src="/img/visa.png" width="60" alt="Tarjeta">
+                                                                    <img src="/img/Visa.png" width="60" alt="Tarjeta">
                                                                 </td>
                                                             </tr>
                                                         </table>
@@ -675,40 +675,41 @@
         </table>
 
         <!--Procesado por-->
-        <table class="container" cellpadding="0" cellspacing="0" align="center">
-            <tr class="banners">
-                <td>
-                    <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                        <tr>
-                            <td width="49%" valign="top" class="">
-                                <table width="100%" border="0" cellspacing="0" cellpadding="0" class="procesadorFondo" style="background-color: #233A87;">
-                                    <tr>
-                                        <td class="fondoProcesador">
-                                            <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                                                <tr>
-
-                                                    <td width="15"></td>
-                                                    <td valign="middle">
-                                                        <p class="textProcesador ">procesado por</p>
-                                                    </td>
-                                                    <td valign="middle" align="right">
-                                                        <img src="https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/ualabis/logoblanco.png"
-                                                            alt="" class="logoProcesador" width="100">
-                                                    </td>
-                                                </tr>
-                                            </table>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </td>
-
-                        </tr>
-                    </table>
+    
+<table class="container" cellpadding="0" cellspacing="0" align="center">
+  <tr class="banners">
+    <td>
+      <table width="100%" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+          <td width="49%" valign="top">
+          
+            <table width="100%" border="0" cellspacing="0" cellpadding="0"
+              style="background-color: [[${marca}]]; border-radius: 0 0 10px 10px; letter-spacing: 0.25em; padding: 8px;">
+              <tr>
+                <td class="fondoProcesador">
+                  <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                    <tr>
+                      <td width="15"></td>
+                      <td valign="middle">
+                        <p class="textProcesador">procesado por</p>
+                      </td>
+                      <td valign="middle" align="right">
+                        <img src="https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/ualabis/logoblanco.png" alt="Logo procesador" class="logoProcesador">
+                      </td>
+                    </tr>
+                  </table>
                 </td>
-            </tr>
-        </table>
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
+
     </table>
-    <!-- Datos de la transacci&Oacute;n -->
+    <!-- Datos de la transacción -->
     <table class="containerFooter" cellpadding="0" cellspacing="0" align="center">
 
         <tr>
