--- a/recibo_venta_variables_firma-ajustespdf.html
+++ b/recibo_venta_variables_firma-ajustespdf.html
@@ -655,37 +655,38 @@
         </table>
 
         <!--Procesado por-->
-        <table class="container" cellpadding="0" cellspacing="0" align="center">
-            <tr class="banners">
-                <td>
-                    <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                        <tr>
-                            <td width="49%" valign="top" class="">
-                                <table width="100%" border="0" cellspacing="0" cellpadding="0" class="procesadorFondo" >
-                                    <tr>
-                                        <td class="fondoProcesador">
-                                            <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                                                <tr>
-
-                                                    <td width="15"></td>
-                                                    <td valign="middle">
-                                                        <p class="textProcesador ">procesado por</p>
-                                                    </td>
-                                                    <td valign="middle" align="right">
-                                                        <img src="${logoInv}" alt="Logo procesador" class="logoProcesador">
-                                                    </td>
-                                                </tr>
-                                            </table>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </td>
-
-                        </tr>
-                    </table>
+<table class="container" cellpadding="0" cellspacing="0" align="center">
+  <tr class="banners">
+    <td>
+      <table width="100%" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+          <td width="49%" valign="top">
+          
+            <table width="100%" border="0" cellspacing="0" cellpadding="0"
+              style="background-color: [[${marca}]]; border-radius: 0 0 10px 10px; letter-spacing: 0.25em; padding: 8px;">
+              <tr>
+                <td class="fondoProcesador">
+                  <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                    <tr>
+                      <td width="15"></td>
+                      <td valign="middle">
+                        <p class="textProcesador">procesado por</p>
+                      </td>
+                      <td valign="middle" align="right">
+                        <img src="${logoInv}" class="logoProcesador">
+                      </td>
+                    </tr>
+                  </table>
                 </td>
-            </tr>
-        </table>
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
+
     </table>
     <!-- Datos de la transacción -->
     <table class="containerFooter" cellpadding="0" cellspacing="0" align="center">
