--- a/editables/recibo_venta_editable_uala.html
+++ b/editables/recibo_venta_editable_uala.html
@@ -199,6 +199,7 @@
             font-weight: bold;
             padding: 10px;
             color: #36b57f;
+            margin-right: 6px;
         }
 
         .textDestacado {
