--- a/editables/recibo_venta_editable_completo.html
+++ b/editables/recibo_venta_editable_completo.html
@@ -155,12 +155,14 @@
             font-weight: bold;
         }
 
+    
         .fechaRecibo {
             padding: 10px;
             font-size: 12px;
             text-align: right;
             margin: 0;
             color: #545463;
+            margin-right: 6px;
         }
 
         .badgeContainer {
@@ -252,6 +254,7 @@
             font-weight: bold;
             padding: 10px;
             color: #36b57f;
+            margin-right: 6px;
         }
           .montoAdv {
             font-size: 32px;
