--- a/recibo_devolucion.html
+++ b/recibo_devolucion.html
@@ -154,6 +154,7 @@
             text-align: right;
             margin: 0;
             color: [[${textos}]];
+            margin-right: 6px;
         }
 
         .badgeContainer {
@@ -246,6 +247,7 @@
             font-weight: bold;
             padding: 10px;
             color: [[${correcto}]];
+            margin-right: 6px;
         }
 
   .monto {
@@ -253,6 +255,7 @@
             font-weight: bold;
             padding: 10px;
             color: [[${correcto}]];
+            margin-right: 6px;
         }
 
          .montoAdv {
@@ -338,13 +341,27 @@
             letter-spacing: 0.25em;
         }
 
-          .detalleSubtitulo {
+       
+
+    .detalleSubtitulo {
             font-size: 12px;
             color: [[${neutral}]];
             margin-top: -8px;
-            margin-bottom: 40px;
+            margin-bottom: 20px;
+            padding-top: 2px;
+            padding-left: 40px;
+            padding-right: 40px;
             text-align: center;
         }
+      .detalleLeyenda {
+            font-size: 10px;
+            line-height: 1.6;
+            color: [[${skeletonLoad}]];
+            margin: 0 auto;
+            text-align: center;
+        }
+
+
 
         .detalleTabla {
             width: 100%;
