--- a/recibo_venta_completo_cashback.html
+++ b/recibo_venta_completo_cashback.html
@@ -154,6 +154,7 @@
             text-align: right;
             margin: 0;
             color: [[${textos}]];
+            margin-right: 6px;
         }
 
         .badgeContainer {
@@ -241,18 +242,14 @@
             color: [[${textos}]];
         }
 
-        .monto {
-            font-size: 32px;
-            font-weight: bold;
-            padding: 10px;
-            color: [[${correcto}]];
-        }
+    
 
   .monto {
             font-size: 32px;
             font-weight: bold;
             padding: 10px;
             color: [[${correcto}]];
+            margin-right: 6px;
         }
 
          .montoAdv {
@@ -338,13 +335,27 @@
             letter-spacing: 0.25em;
         }
 
-          .detalleSubtitulo {
+       
+
+    .detalleSubtitulo {
             font-size: 12px;
             color: [[${neutral}]];
             margin-top: -8px;
-            margin-bottom: 40px;
+            margin-bottom: 20px;
+            padding-top: 2px;
+            padding-left: 40px;
+            padding-right: 40px;
             text-align: center;
         }
+      .detalleLeyenda {
+            font-size: 10px;
+            line-height: 1.6;
+            color: [[${skeletonLoad}]];
+            margin: 0 auto;
+            text-align: center;
+        }
+
+
 
         .detalleTabla {
             width: 100%;
@@ -662,7 +673,9 @@
             <tr>
                 <td colspan="3" class="detalleCompra">
                     <h3 class="detalleTitulo">RECARGA TELEFÓNICA</h3>
-                    <p class="detalleSubtitulo">Telcel paquetes amigo</p>
+                    <p class="detalleSubtitulo">Telcel paquetes amigo <br><br>
+                        <span class="detalleLeyenda ">Estimado cliente en caso de presentarse algún problmea con su compra de tiempo aire, favor de comunicarse al número *264, desde su Telcel</span>
+                    </p>
                     <table width="100%" cellpadding="5" cellspacing="0" class="detalleTabla">
                         <tr class="item">
                             <td></td>
