--- a/recibo_venta_recarga.html
+++ b/recibo_venta_recarga.html
@@ -154,6 +154,7 @@
             text-align: right;
             margin: 0;
             color: [[${textos}]];
+            margin-right: 6px;
         }
 
         .badgeContainer {
@@ -246,6 +247,7 @@
             font-weight: bold;
             padding: 10px;
             color: [[${correcto}]];
+            margin-right: 6px;
         }
 
   .monto {
@@ -253,6 +255,7 @@
             font-weight: bold;
             padding: 10px;
             color: [[${correcto}]];
+            margin-right: 6px;
         }
 
          .montoAdv {
@@ -338,13 +341,27 @@
             letter-spacing: 0.25em;
         }
 
-          .detalleSubtitulo {
+       
+
+    .detalleSubtitulo {
             font-size: 12px;
             color: [[${neutral}]];
             margin-top: -8px;
-            margin-bottom: 40px;
+            margin-bottom: 20px;
+            padding-top: 2px;
+            padding-left: 40px;
+            padding-right: 40px;
             text-align: center;
         }
+      .detalleLeyenda {
+            font-size: 10px;
+            line-height: 1.6;
+            color: [[${skeletonLoad}]];
+            margin: 0 auto;
+            text-align: center;
+        }
+
+
 
         .detalleTabla {
             width: 100%;
@@ -598,7 +615,7 @@
                 <td align="left" class="badgeContainer">
                     <span class="badgeCorrecto">Aprobada</span>
                   
-                     <span class="badgeCorrecto">Recarga Telefónica</span>
+                    <span class="badgeCorrecto">VTA</span>
                 </td>
                 <td align="right">
                     <span class="total">Total</span>
@@ -662,7 +679,9 @@
             <tr>
                 <td colspan="3" class="detalleCompra">
                     <h3 class="detalleTitulo">RECARGA TELEFÓNICA</h3>
-                    <p class="detalleSubtitulo">Telcel paquetes amigo</p>
+                    <p class="detalleSubtitulo">Telcel paquetes amigo <br><br>
+                        <span class="detalleLeyenda ">Estimado cliente en caso de presentarse algún problmea con su compra de tiempo aire, favor de comunicarse al número *264, desde su Telcel</span>
+                    </p>
                     <table width="100%" cellpadding="5" cellspacing="0" class="detalleTabla">
                         <tr class="item">
                             <td></td>
