--- a/editables/recibo_venta_editable_completo_cashbackAjustes.html
+++ b/editables/recibo_venta_editable_completo_cashbackAjustes.html
@@ -921,7 +921,7 @@
                             <td width="49%" valign="top" class="bannerSeparador">
                                 <table width="100%" border="0" cellspacing="0" cellpadding="0" class="bannerItem">
                                     <tr>
-                                        <!-- <td class="bannerItemContent">
+                                         <!-- <td class="bannerItemContent">
                                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                                 <tr>
                                                     <td width="56" valign="middle">
@@ -942,9 +942,52 @@
                                                 </tr>
                                             </table>
                                         </td> -->
+                                        <td class="bannerItemContent">
+                                            <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                                <tr>
+                                                    <td width="56" valign="middle">
+                                                        <table border="0" cellspacing="0" cellpadding="0">
+                                                            <tr>
+                                                                <td align="center" class="bannerImg">
+                                                                    <img src="/img/firma.png" width="60"
+                                                                        alt="Metodo de autorizacion" style="display: none;"> <!--display: block (PARA MOSTRARLA) // SI NO FUNCIONA USAR  / opacity: 0; Y opacity: 1 (PARA MOSTRARLA)-->
+                                                                </td>
+                                                            </tr>
+                                                        </table>
+                                                    </td>
+                                                    <td width="15" style="height: 60px;"></td>
+                                                    <td valign="middle">
+                                                        <p class="tarjeta">AUTORIZADO MEDIANTE</p>
+                                                        <p class="titular">FIRMA</p>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </td>
+
+                                              <!-- <td class="bannerItemContent">
+                                            <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                                <tr>
+                                                    <td width="56" valign="middle">
+                                                        <table border="0" cellspacing="0" cellpadding="0">
+                                                            <tr>
+                                                                <td align="center" class="bannerImg">
+                                                                    <img src="/img/firma.png" width="60"
+                                                                        alt="Metodo de autorizacion">
+                                                                </td>
+                                                            </tr>
+                                                        </table>
+                                                    </td>
+                                                    <td width="15"></td>
+                                                    <td valign="middle">
+                                                        <p class="tarjeta">AUTORIZADO MEDIANTE</p>
+                                                        <p class="titular">FIRMA</p>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </td> -->
 
                                         <!---------------firma-->
-                                          <td class="bannerItemContent">
+                                          <!-- <td class="bannerItemContent">
                                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                                 <tr>
                                                     <td width="100" valign="middle" style="height: 60px;">
@@ -953,7 +996,7 @@
                                                     </td>
                                                 </tr>
                                             </table>
-                                        </td>
+                                        </td> -->
                                     </tr>
                                 </table>
                             </td>
