--- a/recuperacion_de_contraseña.html
+++ b/recuperacion_de_contraseña.html
@@ -678,7 +678,7 @@
         <table class="container" cellpadding="0" cellspacing="0" align="center">
             <tr class="header">
                 <td colspan="3">
-                    <img src="/img/portadaDelta@4x-100.jpg" alt="Portada">
+                    <img src="https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/yuppiepay/portada.png" alt="Portada">
                 </td>
             </tr>
 
